Signed-off-by: miss127 <707657572@qq.com>

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,6 +14,6 @@
                 <a class="btn btn-primary " href="#" (click)="addArticle(newtitle,newlink)">Submit Link</a>
             </div>
         </form>
-        <app-article> </app-article>
+        <app-article-list [articles]='articles'></app-article-list>
     </div>
 </div>
