--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -4,9 +4,9 @@
 form{
     background-color: #F7F7F7;
     padding: 1rem;
-    margin: 2rem 0 0 0;
+    margin: 2rem 0 2rem 0;
 }
-app-article
+app-article-list
 {
     margin: 2rem 0 0 0 ;
 }
