--- a/src/app/article/article.component.html
+++ b/src/app/article/article.component.html
@@ -1,12 +1,12 @@
 <div class="col-3 votes">
-    <h1>{{votes}}</h1>
+    <h1>{{article.votes}}</h1>
     <h6>POINTS</h6>
 </div>
 <div class="col-9">
-    <a href="{{link}}">
-        <h3>{{title}}</h3>
+    <a href="{{article.link}}">
+        <h3>{{article.title}}</h3>
     </a>
-    <p>(angular.io)</p>
+    <p>{{article.domain()}}</p>
     <div>
         <span (click)="voteUp()"><img src="/assets/imgs/up.svg" alt="">upvote</span>
         <span (click)="voteDown()"><img src="/assets/imgs/down.svg" alt="">downvote</span>
